// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header hides search bar when disabled 1`] = `
<header
  class="app-header sticky top-0 z-40 bg-white transition-all duration-300 ease-in-out"
  id="app-header"
>
  <div
    class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
  >
    <div
      class="grid grid-cols-[auto,1fr,auto] items-center"
    >
      <div
        class="flex flex-col"
      >
        <a
          class="text-xl font-bold text-brand-dark no-underline"
          href="/"
        >
          Booka.co.za
        </a>
      </div>
      <div
        class="hidden md:flex justify-center flex-grow relative"
      >
        <div
          class="content-area-wrapper header-nav-links"
        >
          <nav
            class="flex gap-6"
          >
            <a
              class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors no-underline hover:no-underline border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/artists"
            >
              Artists
            </a>
            <a
              class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors no-underline hover:no-underline border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/services"
            >
              Services
            </a>
            <a
              class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors no-underline hover:no-underline border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/faq"
            >
              FAQ
            </a>
            <a
              class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors no-underline hover:no-underline border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/contact"
            >
              Contact
            </a>
          </nav>
        </div>
      </div>
      <div
        class="hidden sm:flex items-center gap-4"
      >
        <div
          class="space-x-4"
        >
          <a
            class="text-sm text-gray-600"
            href="/login"
          >
            Sign in
          </a>
          <a
            class="text-sm text-white bg-brand-dark px-3 py-1 rounded"
            href="/register"
          >
            Sign up
          </a>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header renders extraBar when provided 1`] = `
<header
  class="app-header sticky top-0 z-40 bg-white transition-all duration-300 ease-in-out"
  id="app-header"
>
  <div
    class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
  >
    <div
      class="grid grid-cols-[auto,1fr,auto] items-center"
    >
      <div
        class="flex flex-col"
      >
        <a
          class="text-xl font-bold text-brand-dark no-underline"
          href="/"
        >
          Booka.co.za
        </a>
      </div>
      <div
        class="hidden md:flex justify-center flex-grow relative"
      >
        <div
          class="content-area-wrapper header-nav-links"
        >
          <nav
            class="flex gap-6"
          >
            <a
              class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors no-underline hover:no-underline border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/artists"
            >
              Artists
            </a>
            <a
              class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors no-underline hover:no-underline border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/services"
            >
              Services
            </a>
            <a
              class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors no-underline hover:no-underline border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/faq"
            >
              FAQ
            </a>
            <a
              class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors no-underline hover:no-underline border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/contact"
            >
              Contact
            </a>
          </nav>
        </div>
      </div>
      <div
        class="hidden sm:flex items-center gap-4"
      >
        <div
          class="space-x-4"
        >
          <a
            class="text-sm text-gray-600"
            href="/login"
          >
            Sign in
          </a>
          <a
            class="text-sm text-white bg-brand-dark px-3 py-1 rounded"
            href="/register"
          >
            Sign up
          </a>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`Header renders search bar when enabled 1`] = `
<header
  class="app-header sticky top-0 z-40 bg-white transition-all duration-300 ease-in-out"
  id="app-header"
>
  <div
    class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8"
  >
    <div
      class="grid grid-cols-[auto,1fr,auto] items-center"
    >
      <div
        class="flex flex-col"
      >
        <a
          class="text-xl font-bold text-brand-dark no-underline"
          href="/"
        >
          Booka.co.za
        </a>
      </div>
      <div
        class="hidden md:flex justify-center flex-grow relative"
      >
        <div
          class="content-area-wrapper header-nav-links"
        >
          <nav
            class="flex gap-6"
          >
            <a
              class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors no-underline hover:no-underline border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/artists"
            >
              Artists
            </a>
            <a
              class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors no-underline hover:no-underline border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/services"
            >
              Services
            </a>
            <a
              class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors no-underline hover:no-underline border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/faq"
            >
              FAQ
            </a>
            <a
              class="inline-flex items-center border-b-2 px-1 pt-1 text-sm font-medium transition-colors no-underline hover:no-underline border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300"
              href="/contact"
            >
              Contact
            </a>
          </nav>
        </div>
        <div
          class="compact-searchbar-wrapper absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-full flex justify-center"
        >
          <div
            class="flex-1"
            id="compact-search-bar"
          >
            <form
              aria-label="Artist booking search"
              autocomplete="off"
              class="relative z-45 flex items-stretch bg-white rounded-r-full shadow-lg transition-all duration-200 ease-out text-sm shadow-md hover:shadow-lg"
              role="search"
            >
              <div
                class="flex flex-1 divide-x divide-gray-200"
              >
                <div
                  class="relative flex-1 min-w-0"
                >
                  <button
                    aria-controls="category-popup"
                    aria-expanded="false"
                    class="group relative z-10 w-full flex flex-col justify-center text-left transition-all duration-200 ease-out outline-none px-4 py-2 hover:bg-gray-50 focus:bg-gray-50"
                    id="category-search-button"
                    type="button"
                  >
                    <span
                      class="text-xs text-gray-500 font-semibold mb-1 pointer-events-none select-none"
                    >
                      Category
                    </span>
                    <span
                      class="block truncate pointer-events-none select-none text-gray-400 italic text-sm"
                    >
                      Add artist
                    </span>
                  </button>
                </div>
                <div
                  class="border-l border-gray-200"
                />
                <div
                  class="relative flex-1 min-w-0"
                >
                  <button
                    aria-controls="location-popup"
                    aria-expanded="false"
                    class="group relative z-10 w-full flex flex-col justify-center text-left transition-all duration-200 ease-out outline-none px-4 py-2 hover:bg-gray-50 focus:bg-gray-50"
                    id="location-search-button"
                    type="button"
                  >
                    <span
                      class="text-xs text-gray-500 font-semibold mb-1 pointer-events-none select-none"
                    >
                      Where
                    </span>
                    <span
                      class="block truncate pointer-events-none select-none text-gray-400 italic text-sm"
                    >
                      Add location
                    </span>
                  </button>
                </div>
                <div
                  class="border-l border-gray-200"
                />
                <div
                  class="relative flex-1 min-w-0"
                >
                  <button
                    aria-controls="when-popup"
                    aria-expanded="false"
                    class="group relative z-10 w-full flex flex-col justify-center text-left transition-all duration-200 ease-out outline-none px-4 py-2 hover:bg-gray-50 focus:bg-gray-50"
                    id="when-search-button"
                    type="button"
                  >
                    <span
                      class="text-xs text-gray-500 font-semibold mb-1 pointer-events-none select-none"
                    >
                      When
                    </span>
                    <span
                      class="block truncate pointer-events-none select-none text-gray-400 italic text-sm"
                    >
                      Add dates
                    </span>
                  </button>
                </div>
              </div>
              <button
                aria-label="Search now"
                class="bg-[var(--color-accent)] hover:bg-[var(--color-accent)]/90 px-5 py-3 flex items-center justify-center text-white rounded-r-full transition-all duration-200 ease-out active:scale-95"
                type="submit"
              >
                <svg
                  aria-hidden="true"
                  class="h-5 w-5"
                  data-slot="icon"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
                <span
                  class="sr-only"
                >
                  Search
                </span>
              </button>
            </form>
          </div>
        </div>
      </div>
      <div
        class="hidden sm:flex items-center gap-4"
      >
        <div
          class="space-x-4"
        >
          <a
            class="text-sm text-gray-600"
            href="/login"
          >
            Sign in
          </a>
          <a
            class="text-sm text-white bg-brand-dark px-3 py-1 rounded"
            href="/register"
          >
            Sign up
          </a>
        </div>
      </div>
    </div>
    <div
      class="content-area-wrapper header-full-search-bar mt-3 max-w-4xl mx-auto"
    >
      <form
        aria-label="Artist booking search"
        autocomplete="off"
        class="relative z-45 flex items-stretch bg-white rounded-r-full shadow-lg transition-all duration-200 ease-out text-base shadow-md hover:shadow-lg"
        role="search"
      >
        <div
          class="flex flex-1 divide-x divide-gray-200"
        >
          <div
            class="relative flex-1 min-w-0"
          >
            <button
              aria-controls="category-popup"
              aria-expanded="false"
              class="group relative z-10 w-full flex flex-col justify-center text-left transition-all duration-200 ease-out outline-none px-6 py-3 hover:bg-gray-50 focus:bg-gray-50"
              id="category-search-button"
              type="button"
            >
              <span
                class="text-xs text-gray-500 font-semibold mb-1 pointer-events-none select-none"
              >
                Category
              </span>
              <span
                class="block truncate pointer-events-none select-none text-gray-400 italic text-base"
              >
                Add artist
              </span>
            </button>
          </div>
          <div
            class="border-l border-gray-200"
          />
          <div
            class="relative flex-1 min-w-0"
          >
            <button
              aria-controls="location-popup"
              aria-expanded="false"
              class="group relative z-10 w-full flex flex-col justify-center text-left transition-all duration-200 ease-out outline-none px-6 py-3 hover:bg-gray-50 focus:bg-gray-50"
              id="location-search-button"
              type="button"
            >
              <span
                class="text-xs text-gray-500 font-semibold mb-1 pointer-events-none select-none"
              >
                Where
              </span>
              <span
                class="block truncate pointer-events-none select-none text-gray-400 italic text-base"
              >
                Add location
              </span>
            </button>
          </div>
          <div
            class="border-l border-gray-200"
          />
          <div
            class="relative flex-1 min-w-0"
          >
            <button
              aria-controls="when-popup"
              aria-expanded="false"
              class="group relative z-10 w-full flex flex-col justify-center text-left transition-all duration-200 ease-out outline-none px-6 py-3 hover:bg-gray-50 focus:bg-gray-50"
              id="when-search-button"
              type="button"
            >
              <span
                class="text-xs text-gray-500 font-semibold mb-1 pointer-events-none select-none"
              >
                When
              </span>
              <span
                class="block truncate pointer-events-none select-none text-gray-400 italic text-base"
              >
                Add dates
              </span>
            </button>
          </div>
        </div>
        <button
          aria-label="Search now"
          class="bg-[var(--color-accent)] hover:bg-[var(--color-accent)]/90 px-5 py-3 flex items-center justify-center text-white rounded-r-full transition-all duration-200 ease-out active:scale-95"
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
          <span
            class="sr-only"
          >
            Search
          </span>
        </button>
      </form>
    </div>
  </div>
</header>
`;
